# electripy-studio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/recipes/: agent-collaboration-runtime.md  ai-telemetry.md  cli-tool.md  policy-collaboration-e2e.md  policy-gateway.md  rag-eval-runner.md
docs/user-guide/: ai-agent-collaboration.md  ai-batch-complete.md  ai-cost-ledger.md  ai-eval-assertions.md  ai-evals.md  ai-fallback-chain.md  ai-json-repair.md  ai-llm-cache.md  ai-llm-gateway.md  ai-mcp.md  ai-observe.md  ai-policy-gateway.md  ai-policy.md  ai-product-engineering.md  ai-prompt-fingerprint.md  ai-provider-adapters.md  ai-rag-eval-runner.md  ai-realtime.md  ai-replay-tape.md  ai-sensitive-data-scanner.md  ai-skills.md  ai-structured-output.md  ai-telemetry.md  ai-workload-router.md  circuit-breaker.md  cli.md  component-maturity.md  concurrency.md  core.md  io.md
recipes/01_cli_tool/: README.md  data_processor.py  sample_input.jsonl
recipes/02_llm_gateway/: README.md  fake_provider.py  run_async.py  run_sync.py
recipes/03_policy_collaboration/: README.md  run_demo.py
src/electripy/: __init__.py
src/electripy/ai/: __init__.py  batch_complete.py  cost_ledger.py  fallback_chain.py  json_repair.py  prompt_fingerprint.py  sensitive_data_scanner.py
src/electripy/cli/: __init__.py  app.py  demo.py  rag.py
src/electripy/concurrency/: __init__.py  circuit_breaker.py  rate_limiter.py  retry.py  task_groups.py
src/electripy/core/: __init__.py  config.py  errors.py  logging.py  typing.py
src/electripy/io/: __init__.py  jsonl.py
src/electripy/observability/: __init__.py
tests/: conftest.py
tests/ai/: __init__.py  test_batch_complete.py  test_cost_ledger.py  test_fallback_chain.py  test_json_repair.py  test_prompt_fingerprint.py  test_sensitive_data_scanner.py
tests/ai/agent_collaboration/: __init__.py  test_services.py
tests/ai/agent_runtime/: test_services.py
tests/ai/context_assembly/: test_services.py
tests/ai/conversation_memory/: test_services.py
tests/ai/eval_assertions/: test_eval_assertions.py
tests/ai/evals/: test_adapters.py  test_domain.py  test_errors.py  test_scorers.py  test_services.py
tests/ai/hallucination_guard/: __init__.py  test_services.py
tests/ai/llm_cache/: test_llm_cache.py
tests/ai/mcp/: test_adapters.py  (+3 more)
tests/cli/: test_app.py  test_demo.py
tests/concurrency/: test_circuit_breaker.py  test_rate_limiter.py  test_rate_limiter_properties.py  test_retry.py  test_task_groups.py
tests/core/: test_config.py  test_errors.py  test_logging.py
tests/io/: test_jsonl.py
(+209 files in other folders)
